--- a/Tests/XpoNoSQL.MongoDatabase.Tests.csproj
+++ b/Tests/XpoNoSQL.MongoDatabase.Tests.csproj
@@ -11,6 +11,7 @@
 		<PackageReference Include="Microsoft.Data.Sqlite" Version="10.0.0" />
 		<PackageReference Include="Microsoft.NET.Test.Sdk" Version="18.0.1" />
 		<PackageReference Include="System.Data.SqlClient" Version="4.9.0" />
+		<PackageReference Include="Testcontainers.MongoDb" Version="4.9.0" />
 		<PackageReference Include="xunit" Version="2.9.3" />
 		<PackageReference Include="xunit.runner.visualstudio" Version="3.1.5">
 			<PrivateAssets>all</PrivateAssets>
