Add configurable collation handling and apply to indexes/CRUD
- Parse optional CaseSensitive/CollationLocale from the connection string (MongoConnectionOptions) and store them on the data store instance.
- Use the instance collation for aggregates, updates, and deletes instead of relying solely on XpoDefault.
- Apply the chosen collation to created indexes so queries can use them with consistent case/locale behavior.

--- a/MongoDatabase/XpoNoSQL.MongoDatabase.csproj
+++ b/MongoDatabase/XpoNoSQL.MongoDatabase.csproj
@@ -19,9 +19,10 @@
 		<RepositoryUrl>https://github.com/gbonaros/XpoNoSql.MongoDatabase.git</RepositoryUrl>
 		<RepositoryType>git</RepositoryType>
 		<PackageReadmeFile>README.md</PackageReadmeFile>
-		<PackageTags>DevExpress;XPO;MongoDB;DataStore;NoSQL;.NET;XAF</PackageTags>
+		<PackageTags>DevExpress;XPO;XAF;MongoDB;NoSQL;DataStore;ORM;Database;Provider;.NET</PackageTags>
 
 		<!-- Build & pack -->
+		<GenerateDocumentationFile>true</GenerateDocumentationFile>
 		<GeneratePackageOnBuild>false</GeneratePackageOnBuild>
 		<IncludeSymbols>true</IncludeSymbols>
 		<SymbolPackageFormat>snupkg</SymbolPackageFormat>
